Fix sidebav menu not filling up the 100% of the height on mobile version Fix bad scrolling on desktop view due an static height over the view container

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -169,6 +169,7 @@ a {
 
 #main-menu {
   z-index: 61;
+  position: fixed;
   md-item a {
     cursor: pointer;
   }
@@ -262,22 +263,22 @@ md-option > .md-text > .product-icon {
 //   -webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.05), 0 1px 0 rgba(0, 0, 0, 0.05);
 //   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.05), 0 1px 0 rgba(0, 0, 0, 0.05);
 // }
-
 // .push {
 //   height: 380px;
 // }
-
 .hide-footer {
   display: none;
 }
-.footer, .push {
+
+.footer,
+.push {
   bottom: 0;
   position: fixed;
   width: 100%;
   background: #f1f1f1;
-  .md-button{
-      margin: 0;
-    }
+  .md-button {
+    margin: 0;
+  }
 }
 
 // .footer {
@@ -294,7 +295,6 @@ md-option > .md-text > .product-icon {
 //   border: 1px solid #ccc;
 //   border-bottom: 1px solid #aaa;
 // }
-
 .f-content {
   margin-bottom: 10px;
 }
@@ -332,7 +332,7 @@ md-option > .md-text > .product-icon {
 .ui-view-container {
   position: relative;
   background-color: #f6f6f6!important;
-  min-height: 990px;
+  min-height: 100%;
 }
 
 [ui-view].ng-enter,
